--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: 에라모르겠                          # the main title
+title: 에라모                          # the main title
 
 tagline: A text-focused Jekyll theme   # it will display as the sub-title
 
