--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,12 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: 에라모ff                          # the main title
+title: der Wille zur Macht                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: 10,000 Hours   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  Machine learning, Deep learning, Datascience, Bioinformatics
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'http://tigerkey.github.io/'
@@ -40,12 +40,12 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: ki beom kim
+  name: Ki Beom Kim
   email: kkb1004tom@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     #- https://twitter.com/username      # change to your twitter homepage
-    #- https://github.com/username       # change to your github homepage
+    - https://tigerkey10.github.io       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -73,7 +73,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode:   # [light|dark]
+theme_mode: dark  # [light|dark]
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
@@ -83,7 +83,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: 
 
 # boolean type, the global switch for ToC in posts.
 toc: true
