--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ theme_mode: dark  # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: assets/img/img1.jpg
+avatar: /assets/img/img1.jpg
 
 # boolean type, the global switch for ToC in posts.
 toc: true
